k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodeapp1
  name: nodeapp1
  namespace: default
spec:
  selector:
    matchLabels:
      app: nodeapp1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodeapp1
    spec:
      containers:
      - image: gcr.io/firm-star-336501/nodeapp:v2.7
        imagePullPolicy: IfNotPresent
        name: nodeapp
        resources: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
