k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: v1.example.com
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: nodeapp1
            port:
              number: 3000
  - host: v2.example.com
    http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: nodeapp2
            port:
              number: 3000

# - http:
#       paths:
#       - path: /v1/*
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: nodeapp1
#             port:
#               number: 3000
#       - path: /v2/*
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: nodeapp2
#             port:
#               number: 3000
